// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetailsFooter renders per snapshot when all card interactions are supported (ie, web) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
      }
    }
    issueDetailsData={
      Object {
        "pageTitle": "pageTitle",
        "pageUrl": "http://pageUrl",
        "ruleResult": Object {
          "failureSummary": "failureSummary",
          "fingerprint": "fingerprint",
          "guidanceLinks": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "help": "help",
          "helpUrl": "helpUrl",
          "html": "html",
          "id": "id",
          "ruleId": "ruleId",
          "selector": "selector",
          "snippet": "snippet",
          "status": true,
        },
      }
    }
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot when only UserConfig-agnostic card interactions are supported (ie, electron) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": false,
        },
      }
    }
    issueDetailsData={
      Object {
        "pageTitle": "pageTitle",
        "pageUrl": "http://pageUrl",
        "ruleResult": Object {
          "failureSummary": "failureSummary",
          "fingerprint": "fingerprint",
          "guidanceLinks": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "help": "help",
          "helpUrl": "helpUrl",
          "html": "html",
          "id": "id",
          "ruleId": "ruleId",
          "selector": "selector",
          "snippet": "snippet",
          "status": true,
        },
      }
    }
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="hidden" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
      }
    }
    issueDetailsData={
      Object {
        "pageTitle": "pageTitle",
        "pageUrl": "http://pageUrl",
        "ruleResult": Object {
          "failureSummary": "failureSummary",
          "fingerprint": "fingerprint",
          "guidanceLinks": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "help": "help",
          "helpUrl": "helpUrl",
          "html": "html",
          "id": "id",
          "ruleId": "ruleId",
          "selector": "selector",
          "snippet": "snippet",
          "status": true,
        },
      }
    }
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="unavailable" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight unavailable"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight unavailable
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
      }
    }
    issueDetailsData={
      Object {
        "pageTitle": "pageTitle",
        "pageUrl": "http://pageUrl",
        "ruleResult": Object {
          "failureSummary": "failureSummary",
          "fingerprint": "fingerprint",
          "guidanceLinks": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "help": "help",
          "helpUrl": "helpUrl",
          "html": "html",
          "id": "id",
          "ruleId": "ruleId",
          "selector": "selector",
          "snippet": "snippet",
          "status": true,
        },
      }
    }
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="visible" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightDiv"
  >
    <StyledIconBase
      ariaLabel="HighLight visible"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight visible
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
      }
    }
    issueDetailsData={
      Object {
        "pageTitle": "pageTitle",
        "pageUrl": "http://pageUrl",
        "ruleResult": Object {
          "failureSummary": "failureSummary",
          "fingerprint": "fingerprint",
          "guidanceLinks": Array [
            Object {
              "href": "www.test.com",
              "tags": Array [
                Object {
                  "displayText": "New for WCAG 2.1",
                  "id": "WCAG_2_1",
                },
              ],
              "text": "text",
            },
          ],
          "help": "help",
          "helpUrl": "helpUrl",
          "html": "html",
          "id": "id",
          "ruleId": "ruleId",
          "selector": "selector",
          "snippet": "snippet",
          "status": true,
        },
      }
    }
  />
</div>
`;
